--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
   <link rel="stylesheet" href="./assets/Css/About.css">
   <link rel="stylesheet" href="./assets/css/index.css" />
-
+  <link rel="stylesheet" href="./assets/css/darkMode.css" />
   <title>فعالياتك</title>
 </head>
 
@@ -56,6 +56,9 @@
               <a class="nav-link active" href="./about.html">عنا</a>
             </li>
           </ul>
+                    <button id="theme-toggle" class="btn btn-outline-secondary me-3">
+            <i class="fas fa-sun"></i>
+          </button>
         </div>
       </div>
     </nav>
@@ -95,20 +98,24 @@
           </div>
         </div>
 
-        <div class="msg">
-          <div class="content">
-            <h1>الرسالة</h1>
-            <h5>
-              رسالتنا تتمثل في دعم الحركة الثقافية والترفيهية في المجتمع،
-              وتقديم أداة عملية تساعد الأفراد على اكتشاف الفعاليات المناسبة
-              لاهتماماتهم. نحن نعمل على تمكين المنظمين من الوصول إلى جمهورهم
-              بطريقة أسهل وأكثر فاعلية، وفي الوقت نفسه نمنح الجمهور فرصة
-              لاستكشاف فعاليات جديدة تغني تجربتهم وتلبي اهتماماتهم.
-            </h5>
+        <div class="msg container">
+          <div class="row m-2">
+
+            <div class="content col-md-7 pb-3">
+              <h1>الرسالة</h1>
+              <h5>
+                رسالتنا تتمثل في دعم الحركة الثقافية والترفيهية في المجتمع،
+                وتقديم أداة عملية تساعد الأفراد على اكتشاف الفعاليات المناسبة
+                لاهتماماتهم. نحن نعمل على تمكين المنظمين من الوصول إلى جمهورهم
+                بطريقة أسهل وأكثر فاعلية، وفي الوقت نفسه نمنح الجمهور فرصة
+                لاستكشاف فعاليات جديدة تغني تجربتهم وتلبي اهتماماتهم.
+              </h5>
+            </div>
+            <div class="image col-md-5 pb-3">
+              <img class="rounded" src="./assets/img/about/msg.jpeg" alt="صورة تعبيرية عن الرسالة">
+            </div>
           </div>
-          <div class="image">
-            <img class="rounded" src="./assets/img/about/msg.jpeg" alt="صورة تعبيرية عن الرسالة">
-          </div>
+
         </div>
       </div>
 
@@ -292,6 +299,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
