--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
   <link rel="stylesheet" href="./assets/css/index.css" />
-  <link rel="stylesheet" href="./assets/css/contact.css" />
+  <link rel="stylesheet" href="./assets/css/darkMode.css" />  <link rel="stylesheet" href="./assets/css/contact.css" />
 
   <title>فعالياتك</title>
 </head>
@@ -57,6 +57,9 @@
               <a class="nav-link" href="./about.html">عنا</a>
             </li>
           </ul>
+                    <button id="theme-toggle" class="btn btn-outline-secondary me-3">
+            <i class="fas fa-sun"></i>
+          </button>
         </div>
       </div>
     </nav>
