--- a/events.html
+++ b/events.html
@@ -50,7 +50,7 @@
     <link rel="manifest" href="./assets/img/icon//site.webmanifest" />
 
     <link rel="stylesheet" href="./assets/css/index.css" />
-    <link rel="stylesheet" href="./assets/css/events.css" />
+  <link rel="stylesheet" href="./assets/css/darkMode.css" />    <link rel="stylesheet" href="./assets/css/events.css" />
 
     <title>فعالياتك</title>
   </head>
@@ -87,10 +87,13 @@
               <li class="nav-item ps-5">
                 <a class="nav-link" href="./contact.html">تواصل معنا</a>
               </li>
-              <li class="nav-item ps-5">
+                            <li class="nav-item ps-5">
                 <a class="nav-link" href="./about.html">عنا</a>
               </li>
             </ul>
+          <button id="theme-toggle" class="btn btn-outline-secondary me-3">
+            <i class="fas fa-sun"></i>
+          </button>
           </div>
         </div>
       </nav>
